--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -32,7 +32,7 @@
   </head>
   <body class="bg-dark">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root" class="h-100"></div>
+    <div id="root" style="min-height: 100vh"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
