"Updated frontend code: changed API URLs, added Spinner component, and refactored Stats component"

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -19,6 +19,7 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
+    <link rel="icon" href="./assets/images/journaling.png" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
